--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <main class="mt-4  " >
-    <div class="container mt-5 p-5 bg-light rounded">
+    <div class="container mt-5 p-5  rounded">
         <h1 class="text-center mt-3 mb-5 p-3 fs-1">LUMIERE</h1>
         <p class="text-center fs-4">Descubre el poder del mundo digital con nosotros. Desde diseño web hasta estrategias
             de marketing, iluminamos tu camino hacia el éxito en línea. ¡Únete a nosotros y haz brillar tu presencia
