--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -3,14 +3,15 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre nosotros</a>
+                    <a class="nav-link" href="/nosotros">Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
+                    <a class="nav-link" href="/listServicios">Servicio y suscripciones</a>
                 </li>
+
             </ul>
             <span class="navbar-text text-uppercase text-center  ">
                 LUMIERE
