--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -8,8 +8,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/nosotros">Sobre nosotros</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/listServicios">Servicio y suscripciones</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Servicio y suscripciones
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Servicio y suscripciones</a></li>
+                        <li><a class="dropdown-item" href="#">Crear servicio</a></li>
+                        <li><a class="dropdown-item" href="#">Crear suscripcion</a></li>
+                        
+                    </ul>
                 </li>
 
             </ul>
@@ -19,4 +28,3 @@
         </div>
     </div>
 </nav>
-
