--- a/src/views/servicios/listServicios.hbs
+++ b/src/views/servicios/listServicios.hbs
@@ -16,7 +16,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
 
-                            <p class="fw-light"><b> Talla:</b> {{nombre_servicio}} <br>
+                            <p class="fw-light"><b> Nombre del servicio:</b> {{nombre_servicio}} <br>
                             </p>
         
                             <p class="card-text fw-lighter">{{descripcion_servicio}}</p>
@@ -39,7 +39,7 @@
         </div>
         <div class="card-body">
             <p>Ingresa un nuevo servicio en la aplicacion</p>
-            <a href="/addServicios" class="btn btn-primary">Crear servicio</a>
+            <a href="/addServicios" class="btn btn-success btn-sm">Crear servicio</a>
         </div>
     </div>
     {{/if}}
