--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -6,17 +6,18 @@
                     <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/nosotros">Sobre nosotros</a>
+                    <a class="nav-link" href="/sobrenosotros">Sobre nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="/listServicios" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Servicio y suscripciones
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Servicio y suscripciones</a></li>
-                        <li><a class="dropdown-item" href="#">Crear servicio</a></li>
-                        <li><a class="dropdown-item" href="#">Crear suscripcion</a></li>
+                        <li><a class="dropdown-item" href="/listServicios">servicios</a></li>
+                        <li><a class="dropdown-item" href="/listup">suscripciones</a></li>
+                        <li><a class="dropdown-item" href="/addServicios">Crear servicio</a></li>
+                        <li><a class="dropdown-item" href="/addsup">Crear suscripcion</a></li>
                         
                     </ul>
                 </li>
