Se actualizan funcionalidades de operaciones CRUD

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -6,7 +6,7 @@
                     <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sobrenosotros">Sobre nosotros</a>
+                    <a class="nav-link active" href="/sobrenosotros">sobre nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/listServicios" role="button" data-bs-toggle="dropdown"
@@ -15,7 +15,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/listServicios">servicios</a></li>
-                        <li><a class="dropdown-item" href="/listup">suscripciones</a></li>
+                        <li><a class="dropdown-item" href="/listsup">suscripciones</a></li>
                         <li><a class="dropdown-item" href="/addServicios">Crear servicio</a></li>
                         <li><a class="dropdown-item" href="/addsup">Crear suscripcion</a></li>
                         
