--- a/src/views/servicios/sobrenosotros.hbs
+++ b/src/views/servicios/sobrenosotros.hbs
@@ -1,76 +1,26 @@
+<main>
 <div class="container mt-4">
     <div class="card m-2">
         <h5 class="card-header text-center">Misión</h5>
         <div class="card-body">
-            <p class="card-text"> En ADVENTURE, nuestra misión es inspirar y equipar a aventureros de todas las edades y
-                habilidades, proporcionando ropa de alta calidad y rendimiento para actividades deportivas al aire
-                libre. Nos
-                comprometemos a diseñar y ofrecer productos que fusionen innovación, durabilidad y confort, permitiendo
-                a
-                nuestros clientes explorar y disfrutar de la naturaleza con total confianza y seguridad. Promovemos un
-                estilo de
-                vida activo y responsable con el medio ambiente, apoyando prácticas sostenibles en todos nuestros
-                procesos y
-                colaborando con organizaciones dedicadas a la conservación de nuestros espacios naturales. </p>
+            <p class="card-text"> En LUMIERE, nos apasiona conectar la innovación con la creatividad para ofrecer soluciones digitales que transforman negocios y vidas. Nuestro equipo de expertos en diseño web, desarrollo de software y marketing digital trabaja incansablemente para crear experiencias en línea que no solo cumplen, sino que superan las expectativas de nuestros clientes. Con un enfoque centrado en la calidad, la eficiencia y la satisfacción del cliente, nos enorgullece ser el socio confiable en tu viaje hacia el éxito digital. ¡Iluminamos tu camino hacia un futuro brillante en el mundo digital! </p>
         </div>
     </div>
 
     <div class="card m-2">
         <h5 class="card-header text-center">Visión</h5>
         <div class="card-body">
-            <p class="card-text"> Ser reconocidos como líderes globales en la industria de ropa deportiva para
-                actividades al
-                aire libre, ofreciendo productos innovadores y sostenibles que superen las expectativas de nuestros
-                clientes.
-                Aspiramos a fomentar una comunidad global de aventureros comprometidos con la exploración responsable y
-                la
-                preservación del medio ambiente, contribuyendo a la creación de un mundo donde cada persona se sienta
-                conectada
-                con la naturaleza y empoderada para descubrir su propio potencial a través de la aventura.</p>
+            <p class="card-text"> Nuestra visión en LUMIERE es ser líderes globales en la creación de soluciones digitales innovadoras que impulsen la transformación y el crecimiento sostenible de nuestros clientes. Aspiramos a iluminar el futuro digital con nuestras ideas creativas, tecnologías avanzadas y un compromiso inquebrantable con la excelencia. Queremos ser reconocidos no solo por la calidad de nuestro trabajo, sino también por nuestra capacidad para inspirar y empoderar a las empresas a alcanzar su máximo potencial en el competitivo mundo digital.</p>
         </div>
     </div>
 
     <div class="card m-2">
         <h5 class="card-header text-center">Historia</h5>
         <div class="card-body">
-            <p class="card-text">Hace una década, un grupo de apasionados aventureros se unió con un propósito claro:
-                crear
-                una marca de ropa deportiva que no solo cumpliera con los más altos estándares de calidad y rendimiento,
-                sino
-                que también reflejara su amor por la naturaleza y las actividades al aire libre. Así nació [Nombre de la
-                Empresa].</p>
-            <p class="card-text">Desde nuestros humildes comienzos en [Ciudad, País], lanzamos nuestra primera línea de
-                ropa
-                con la visión de ofrecer productos que fueran tanto funcionales como innovadores. Inspirados por las
-                majestuosas
-                montañas, los ríos caudalosos y los intrincados senderos de nuestro entorno, nos dedicamos a diseñar
-                ropa que
-                pudiera soportar las condiciones más extremas y acompañar a nuestros clientes en sus aventuras más
-                desafiantes.
-            </p>
-            <p class="card-text">A lo largo de los años, hemos ampliado nuestra gama de productos para incluir
-                equipamiento
-                especializado para trekking, senderismo, rafting, canopy y espeleología. Nuestro compromiso con la
-                calidad nos
-                ha llevado a incorporar tecnologías avanzadas y materiales sostenibles en nuestros procesos de
-                fabricación,
-                garantizando que cada prenda no solo proteja a nuestros clientes, sino que también respete el medio
-                ambiente.
-            </p>
-            <p class="card-text">La dedicación y la pasión por la aventura que nos impulsaron desde el principio siguen
-                siendo
-                el corazón de nuestra empresa. Hoy, después de 10 años, [Nombre de la Empresa] no solo es sinónimo de
-                excelencia
-                en ropa deportiva, sino también de una comunidad de aventureros que comparten nuestro compromiso con la
-                exploración responsable y la conservación de la naturaleza.</p>
-            <p class="card-text">Nuestro viaje está lejos de haber terminado. Continuamos innovando, aprendiendo y
-                creciendo,
-                con la misma energía y entusiasmo que nos llevó a dar nuestros primeros pasos hace una década. Gracias a
-                la
-                confianza y lealtad de nuestros clientes, miramos hacia el futuro con la convicción de que las mejores
-                aventuras
-                están aún por venir.</p>
+            <p class="card-text">LUMIERE nació de la pasión compartida de un grupo de visionarios por la tecnología y la creatividad. Fundada en 2010, nuestra empresa comenzó como un pequeño equipo de desarrolladores y diseñadores dedicados a ofrecer soluciones web personalizadas para pequeñas empresas. Con el tiempo, nuestra dedicación a la innovación y la excelencia nos permitió crecer y expandir nuestros servicios a diversas industrias. Hoy, LUMIERE se enorgullece de ser un referente en el mundo digital, ayudando a empresas de todos los tamaños a transformar sus ideas en realidades impactantes y sostenibles.</p>
+            
         </div>
     </div>
 </div>
 </div>
+</main>
