--- a/src/views/suscripcion/editsup.hbs
+++ b/src/views/suscripcion/editsup.hbs
@@ -4,23 +4,24 @@
             <div class="card text-center">
                 <div class="card-header">
                     <h3 class="text-uppercase">
-                        Actualizar suscripcion
+                        Actualiza una suscripcion
                     </h3>
                 </div>
                 <div class="card-body">
-                    <form action="/editsup/{{sup.id_sup}}" method="post">
+                    <form action="/editsup/{{sup.Id_sup}}" method="post">
                     <div class="input-group mt-2">
-                        <label for="nombre_sup" class="input-group-text">Nombre de la suscripcion </label>
-                        <input class="form-control"  type="text" name="nombre_sup" placeholder="Marketing" id="nombre_sup" value="{{sup.nombre_sup}}" autofocus required>
+                        <label for="nombre_sup" class="input-group-text">Nombre de la suscripcion</label>
+                        <input class="form-control"  type="text" name="nombre_sup" placeholder="Marketing 2 meses" id="nombre_sup"  value="{{sup.nombre_sup}}" autofocus required>
                         </div>
                         <div class="input-group mt-2">
                         <label for="descripcion_sup" class="input-group-text">Descripcion de la suscripcion</label>
-                        <input class="form-control"  type="text" name="descripcion_sup" placeholder="Servicio personalizado ..." id="descripcion_sup" value="{{sup.descripcion_ssup}}" autofocus required>
+                        <input class="form-control"  type="text" name="descripcion_sup" placeholder="Servicio personalizado ..." id="descripcion_sup" value="{{sup.descripcion_sup}} " autofocus required>
                         </div>
                         <div class="input-group mt-2">
                         <label for="precio" class="input-group-text">Precio suscripcion</label>
-                        <input class="form-control"  type="text" name="precio" placeholder="57.99" id="precio"  autofocus required>
+                        <input class="form-control"  type="text" name="precio" placeholder="57.99" id="precio" value="{{sup.precio}}" autofocus required>
                         </div>
+                        
                         <div class="from-group mt-4 d-grid gap-2">
                             <button class="btn btn-success">Actualizar suscripcion</button>
                         </div>
